# invenio-records

./: .gitignore  pyproject.toml  run-tests.sh  setup.cfg
invenio_records/dumpers/: base.py  indexedat.py  relations.py  search.py
